--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-lazy-load-image-component": "^1.5.5",
+    "react-meta-tags": "^1.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
